--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
 
     <!-- ✅ Navbar -->
     <nav class="navbar">
-        <div class="logo">Recipe Finder</div>
+        <div class="logo">Yumlytic</div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="./saved-recipes.html">Saved Recipes</a></li>
