Added sticky footer and improved UI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,6 +37,13 @@
     <!-- ✅ Recipe List -->
     <div id="recipe-list"></div>
 
+
+    <footer class="footer">
+        <p>&copy; 2025 Yumlytic. All Rights Reserved.</p>
+       
+    </footer>
+
+
     <script src="js/app.js"></script>
 </body>
 </html>
