--- a/frontend/saved-recipes.html
+++ b/frontend/saved-recipes.html
@@ -29,6 +29,10 @@
         <h1>Saved Recipes</h1>
         <div id="saved-list"></div>
     </div>
+    <footer class="footer">
+        <p>&copy; 2025 Yumlytic. All Rights Reserved.</p>
+       
+    </footer>
 
     <script src="js/saved.js"></script>
 </body>
