--- a/frontend/recipe-details.html
+++ b/frontend/recipe-details.html
@@ -31,7 +31,10 @@
         
         <button class="back-button" onclick="window.history.back()">⬅ Back</button>
     </div>
-
+    <footer class="footer">
+        <p>&copy; 2025 Yumlytic. All Rights Reserved.</p>
+       
+    </footer>
     <script src="js/details.js"></script>
 </body>
 </html>
